# axiom-core

./: AGENTS.md  AUDIT.md  Cargo.toml  README.md
.github/workflows/: axiom-compliance.yml
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/tests/: cli_tests.rs
crates/axiom-core/: Cargo.toml
crates/verax-core/benches/: verax_benchmarks.rs
crates/verax-core/src/: artifact.rs  cbor.rs  cose.rs  ct.rs  error.rs  hash.rs  hsm.rs  predicate.rs  shred.rs  statement.rs  verify.rs
crates/verax-core/tests/: hardened_conformance.rs  verax_use_cases.rs
docs/: protocol-spec.md
