[workspace]
resolver = "2"
members = [
    "crates/axiom-core",
    "crates/axiom-core-ffi",
    "crates/axiom-core-python",
    "crates/axiom-core-node",
    "crates/axiom-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Axiom Protocol — tamper-evident provenance chains with deterministic CBOR, Ed25519+ML-DSA-65 hybrid signatures, CT transparency anchoring, and PII shredding. IETF audit passed, 101 tests, Axiom-True v1.0"
repository = "https://github.com/thupa-pro/axiom-core"
homepage = "https://github.com/axiom-protocol/axiom#readme"
authors = ["Axiom Protocol Contributors"]
